# python-strtobool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: integration_delivery.yml
str_to_bool/: __init__.py
tests/: test_general.py
